app/stage/stage_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: aaa-application-stage-service
  namespace: aaa-application-stage
  labels:
    app: aaa-application-stage
    app.kubernetes.io/component: aaa-application-stage
    app.kubernetes.io/instance: aaa-application-stage
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    deployment: www-page-deployment-stage
status:
  loadBalancer: {}
